--- a/mklivecd/src/linuxrc.in
+++ b/mklivecd/src/linuxrc.in
@@ -20,7 +20,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) linuxrc script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: linuxrc.in,v 1.33 2003/11/05 12:51:18 jaco Exp $
+# $Id: linuxrc.in,v 1.34 2003/11/13 06:26:32 jaco Exp $
 #
 
 ### global variables
@@ -56,7 +56,7 @@ MNTRAMDISK=/ramfs
 progress_num=0
 progress_full=26 # our 10, +16 for hwdetect
 progress_on=1
-progress_max=65534; # normal: 65534
+progress_max=65534 # normal: 65534
 
 ### screen colors
 RES_COL=65
