--- a/mklivecd/src/linuxrc.in
+++ b/mklivecd/src/linuxrc.in
@@ -20,7 +20,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) linuxrc script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: linuxrc.in,v 1.36 2003/11/16 07:06:44 jaco Exp $
+# $Id: linuxrc.in,v 1.37 2003/11/16 07:47:00 jaco Exp $
 #
 
 ### global variables
@@ -430,9 +430,9 @@ createramdisk() {
 							[ ! -e /var/\$d ] && ln -sf /initrd$MNTLIVECD/var/\$d /var/\$d || true; \
 							;; \
 						cache*|db*|lib*|local*|lock*|log*|mail*|mtink*|nis*|opt*|preserve*|run*|spool*|yp*) \
-							mkdir -p '/var/\$d' || true ; \
-							chown --reference='/initrd$MNTLIVECD/var/\$d' '/var/\$d';\
-							chmod --reference='/initrd$MNTLIVECD/var/\$d' '/var/\$d';\
+							mkdir -p \"/var/\$d\" || true ; \
+							chown --reference=\"/initrd$MNTLIVECD/var/\$d\" \"/var/\$d\";\
+							chmod --reference=\"/initrd$MNTLIVECD/var/\$d\" \"/var/\$d\";\
 							;; \
 						tmp*) \
 							;; \
