--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -20,7 +20,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.53 2003/11/18 11:10:26 jaco Exp $
+# $Id: hwdetect.in,v 1.54 2003/11/18 11:18:47 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -508,8 +508,10 @@ sub hwdetect_getvideo {
 	$probed_card;
 }
 
-# res => [ laptop, generic, x, y ]
+# res => [ laptop (monitor), generic (monitor), x, y ]
 my %generic_res = (
+	'640x480'   => ['Generic|Flat Panel 1024x768',  'Generic|1024x768 @ 70 Hz',  640,  480 ],
+	'800x600'   => ['Generic|Flat Panel 1024x768',  'Generic|1024x768 @ 70 Hz',  800,  600 ],
 	'1024x768'  => ['Generic|Flat Panel 1024x768',  'Generic|1024x768 @ 70 Hz',  1024, 768 ],
 	'1280x1024' => ['Generic|Flat Panel 1280x1024', 'Generic|1280x1024 @ 60 Hz', 1280, 1024],
 	'1400x1050' => ['Generic|Flat Panel 1400x1050', 'Generic|1280x1024 @ 60 Hz', 1400, 1050],
