--- a/mklivecd/mklivecd.spec.in
+++ b/mklivecd/mklivecd.spec.in
@@ -1,4 +1,4 @@
-# $Id: mklivecd.spec.in,v 1.16 2003/11/05 12:53:01 jaco Exp $
+# $Id: mklivecd.spec.in,v 1.17 2003/11/18 23:53:50 bgmilne Exp $
 
 %define name		mklivecd
 %define version		@MKLIVECDVER@
@@ -39,7 +39,7 @@ rm -rf %buildroot
 %doc AUTHORS COPYING CHANGELOG FAQ README TODO
 %{_sbindir}/mklivecd
 %{_sbindir}/hwdetect
-%{_datadir}/mklivecd/linuxrc
+%{_datadir}/mklivecd
 
 %changelog
 * @SPECDATE@ Jaco Greeff <jaco@linuxminicd.org> @MKLIVECDVER@-@MKLIVECDREL@mdk
