--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -20,7 +20,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.54 2003/11/18 11:18:47 jaco Exp $
+# $Id: hwdetect.in,v 1.55 2003/11/20 05:40:53 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -556,22 +556,19 @@ sub hwdetect_getxfree {
 	Xconfig::screen::configure($rawX, $def_card);
 
 	# do some resolution magic
-	my $resolution = undef;
-	if ($cmdline{'xres'}) {
-		$resolution->{X} = $generic_res{$cmdline{'xres'}}[2] || 1024;
-		$resolution->{Y} = $generic_res{$cmdline{'xres'}}[3] || 768;
-	}
-	$resolution->{Depth} = $cmdline{'xbpp'} if ($cmdline{'xbpp'});
-	$rawX->set_resolution($resolution) if ($resolution);
 	Xconfig::resolution_and_depth::configure(undef, $rawX, $def_card, $def_monitor, 1);
-	$resolution = $rawX->get_resolution;
-	if (($resolution->{X} lt 1024) && (!$cmdline{'xres'} || !$cmdline{'xbpp'})) {
+	my $resolution = $rawX->get_resolution;
+	if (($resolution->{X} lt 1024) && !defined($cmdline{'xres'}) && !defined($cmdline{'xbpp'})) {
 		$resolution->{X} = 1024;
 		$resolution->{Y} = 768;
 		$resolution->{Depth} = 16;
-		$rawX->set_resolution($resolution);
-		Xconfig::resolution_and_depth::configure(undef, $rawX, $def_card, $def_monitor, 1);
 	}
+	elsif (defined($cmdline{'xres'})) {
+		$resolution->{X} = $generic_res{$cmdline{'xres'}}[2];
+		$resolution->{Y} = $generic_res{$cmdline{'xres'}}[3];
+	}
+	$resolution->{Depth} = $cmdline{'xbpp'} if (defined($cmdline{'xbpp'}));
+	$rawX->set_resolution($resolution);
 
 	unless ($probe) {
 		print "Writing X configuration: ";
