--- a/mklivecd/src/linuxrc.in
+++ b/mklivecd/src/linuxrc.in
@@ -20,7 +20,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) linuxrc script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: linuxrc.in,v 1.41 2003/11/19 13:56:29 jaco Exp $
+# $Id: linuxrc.in,v 1.42 2003/11/20 18:27:07 jaco Exp $
 #
 
 ### global variables
@@ -438,7 +438,7 @@ createramdisk() {
 				"for d in \`find /initrd$MNTLIVECD/var/ -type d\`; do \
 					d=\${d#/initrd$MNTLIVECD/var/} ; \
 					case \$d in \
-						lib/rpm*|lib/urpmi*|lib/samba*) \
+						lib/rpm*|lib/urpmi*|lib/samba*|lib/mysql*) \
 							[ ! -e /var/\$d ] && ln -sf /initrd$MNTLIVECD/var/\$d /var/\$d || true; \
 							;; \
 						cache*|db*|lib*|local*|lock*|log*|mail*|mtink*|nis*|opt*|preserve*|run*|spool*|yp*) \
