--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -20,7 +20,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.60 2003/11/22 15:07:27 jaco Exp $
+# $Id: hwdetect.in,v 1.61 2003/11/22 15:25:37 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -1079,10 +1079,10 @@ sub hwdetect_writedisks {
 		print_success();
 
 		# write /etc/fstab
+		system("mkdir -p $prefix/etc/livecd/hwdetect/");
 		print "    Writing $prefix/etc/fstab: ";
 		open FSTAB, '>>', "$prefix/etc/fstab";
 		print FSTAB "\n### entries below this line were automatically added by $SCRIPT_NAME v$SCRIPT_VER\n";
-		qx(mkdir -p $prefix/etc/livecd/hwdetect/);
 		open INFO, '>', "$prefix/etc/livecd/hwdetect/mounts.cfg";
 		foreach my $dev (sort keys %all_devs) {
 			print FSTAB "\n# ".$all_devs{$dev}->{info};
