--- a/livecd-utils/Makefile
+++ b/livecd-utils/Makefile
@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.1 2003/11/21 19:21:08 jaco Exp $
+# $Id: Makefile,v 1.2 2003/11/24 05:27:55 jaco Exp $
 
 include Rules.mk
 
@@ -38,6 +38,8 @@ dist: spec
 	$(MD5SUM) $(DISTDIR)/$(UTILSDIST).tar.bz2 \
 		>$(DISTDIR)/$(UTILSDIST).tar.bz2.md5
 	$(RM) -rf $(UTILSDIST)
+	cd $(ICONDIR) && $(TAR) -c *.png | \
+		$(BZIP2) >../$(DISTDIR)/$(ICONSDIST).tar.bz2
 
 rpm: dist
 	$(RPMBUILD) -ta $(DISTDIR)/$(UTILSDIST).tar.bz2
