Add Texstar's icon/menu changes

--- a/livecd-utils/livecd-utils.spec.in
+++ b/livecd-utils/livecd-utils.spec.in
@@ -1,4 +1,4 @@
-# $Id: livecd-utils.spec.in,v 1.1 2003/11/21 19:21:08 jaco Exp $
+# $Id: livecd-utils.spec.in,v 1.2 2003/11/24 05:28:24 jaco Exp $
 
 %define name		livecd-utils
 %define version		@UTILSVER@
@@ -14,6 +14,7 @@ License:		GPL
 Group:			System/Configuration/Boot and Init
 URL:			http://livecd.berlios.de/
 Source0:		%{name}-@ARCHIVEVER@.tar.bz2
+Source1:		%{name}.icons.tar.bz2
 Requires:		zenity
 BuildRoot:		%{_tmppath}/%{name}-root
 Buildarch:		noarch
@@ -23,6 +24,7 @@ Buildarch:		noarch
 
 %prep
 %setup -q -n %{name}-@ARCHIVEVER@
+tar --bzip2 -xf %{SOURCE1}
 
 %build
 %make
@@ -31,6 +33,28 @@ Buildarch:		noarch
 rm -rf %buildroot
 %makeinstall DESTDIR=%buildroot
 
+#icons
+mkdir -p %buildroot/%_miconsdir \
+	 %buildroot/%_liconsdir \
+	 %buildroot/%_iconsdir
+install -m 644 %{name}_16.png %buildroot/%{_miconsdir}/%{name}.png
+install -m 644 %{name}_32.png %buildroot/%{_iconsdir}/%{name}.png
+install -m 644 %{name}_48.png %buildroot/%{_liconsdir}/%{name}.png
+
+# Menu
+mkdir -p %buildroot/%_menudir
+cat > %buildroot/%_menudir/%{name}  <<EOF
+?package(%{name}): command="%_sbindir/livecd-install" needs="X11" \
+icon="%{name}.png" section="Configuration/Hardware" \
+title="Livecd-Install" longtitle="mklivecd Installer"
+EOF
+
+%post
+%{update_menus}
+
+%postun
+%{clean_menus}
+
 %clean
 rm -rf %buildroot
 
@@ -38,7 +62,17 @@ rm -rf %buildroot
 %defattr(-,root,root)
 %doc AUTHORS COPYING CHANGELOG
 %{_sbindir}/livecd-install
+%{_miconsdir}/%{name}.png
+%{_iconsdir}/%{name}.png
+%{_liconsdir}/%{name}.png
+%{_menudir}/*
 
 %changelog
 * @SPECDATE@ Jaco Greeff <jaco@linuxminicd.org> @UTILSVER@-@UTILSREL@mdk
 - version @ARCHIVEVER@
+
+* Sun Nov 23 2003 Texstar <texstar@houston.rr.com> 0.1.0-0.cvs.20031123.2mdk
+- Make icons and menu entry for livecd-utils
+
+* Sun Nov 23 2003 Jaco Greeff <jaco@linuxminicd.org> 0.1.0-0.cvs.20031123.1mdk
+- version 0.1.0-cvs.20031123
