--- a/mklivecd/src/halt.local.in
+++ b/mklivecd/src/halt.local.in
@@ -1,16 +1,34 @@
 #!/bin/bash
 #
 # This script is part of mklivecd and is here to:
-# 1)Check if we should eject the CD
-# 2)If so unmount the cloop and CD, ensuring we have everything necessary
-#   below
-# 3)Eject the CD with a prompt (so eject must be in memory)
-# 4)Run /sbin/halt as it would normally be run, but halt needs to be in
-#   memory. We call it because the halt script would call /sbin/halt
-#   where /sbin was a link to the cloop image (no longer accessible) so we
-#   either need to have our own halt or pivot_root
+#   1) Check if we should eject the CD
+#   2) If so unmount the cloop and CD, ensuring we have everything necessary
+#      below
+#   3) Eject the CD with a prompt (so eject must be in memory)
+#   4) Run /sbin/halt as it would normally be run, but halt needs to be in
+#      memory. We call it because the halt script would call /sbin/halt
+#      where /sbin was a link to the cloop image (no longer accessible) so we
+#      either need to have our own halt or pivot_root
 #
-# $Id: halt.local.in,v 1.3 2003/11/24 13:11:44 jaco Exp $
+# Copyright (C) 2003, Buchan Milne <bgmilne@cae.co.za>
+#
+#    This program is free software; you can redistribute it and/or modify
+#    it under the terms of the GNU General Public License as published by
+#    the Free Software Foundation; either version 2 of the License, or
+#    (at your option) any later version.
+#
+#    This program is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GNU General Public License for more details.
+#
+#    You should have received a copy of the GNU General Public License
+#    along with this program; if not, write to the Free Software
+#    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+#
+# The latest version of this script can be found at http://livecd.berlios.de
+#
+# $Id: halt.local.in,v 1.4 2003/11/24 13:20:09 jaco Exp $
 #
 
 # Variables
@@ -38,11 +56,12 @@ DEVICE=${DEVICE// *}
 
 echo "Unmounting /initrd$MNTLIVECD"
 umount /initrd$MNTLIVECD 2>/dev/null
+
+# Unload the cloop module before trying to umount/eject CD
+rmmod cloop
+
 echo "Unmounting /initrd$MNTCDROM"
 umount /initrd$MNTCDROM 2>/dev/null
-
-# Unload the cloop module before trying to eject
-rmmod cloop
 
 # Hopefully we are unmounted now, try eject
 echo "Ejecting $DEVICE"
