--- a/livecd-utils/livecd-utils.spec.in
+++ b/livecd-utils/livecd-utils.spec.in
@@ -1,4 +1,4 @@
-# $Id: livecd-utils.spec.in,v 1.3 2003/11/30 16:35:24 jaco Exp $
+# $Id: livecd-utils.spec.in,v 1.4 2003/12/01 06:43:08 jaco Exp $
 
 %define name		livecd-utils
 %define version		@UTILSVER@
@@ -61,7 +61,7 @@ rm -rf %buildroot
 
 %files
 %defattr(-,root,root)
-%doc AUTHORS COPYING CHANGELOG
+%doc AUTHORS CHANGELOG COPYING CREDITS 
 %{_sbindir}/livecd-install
 %{_miconsdir}/%{name}.png
 %{_iconsdir}/%{name}.png
